--- a/hosts.template
+++ b/hosts.template
@@ -2,9 +2,16 @@
 {{ range $container := $ }}
 {{- (first $container.Networks).IP }} {{ $container.Name }}.docker    # {{ $container.Name }} ({{$container.ID}} from {{$container.Image.Repository}})
 {{ end }}
+
 {{- range $container := whereLabelExists $ "hosts" -}}
 {{ range $hostname := split $container.Labels.hosts " " }}
 {{ (first $container.Networks).IP }} {{ $hostname }}    # {{ $container.Name }} ({{$container.ID}} from {{$container.Image.Repository}})
 {{- end -}}
+{{ end }}
+
+{{- range $container := whereLabelExists $ "com.docker.compose.project" -}}
+{{ (first $container.Networks).IP }} {{ index $container.Labels "com.docker.compose.service" -}}_
+    {{- index $container.Labels "com.docker.compose.container-number" }}.
+    {{- index $container.Labels "com.docker.compose.project" -}}.docker     # {{ $container.Name }} from docker-compose project {{ index $container.Labels "com.docker.compose.project" }}
 {{ end }}
 # </docker-hosts>
